# Price-Tracker

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: router.py
app/api/dependencies/: __init__.py  auth.py
app/api/v1/: auth.py  products.py  router.py  subscriptions.py  users.py
app/core/: __init__.py  config.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  base.py  product.py  subscription.py  user.py
app/schemas/: __init__.py  base.py  parser.py  price_history.py  product.py  subscription.py  user.py
app/services/: __init__.py  notification.py  price_monitor.py
app/services/parser/: __init__.py  base.py  demo.py  exceptions.py  factory.py  service.py
app/templates/emails/: price_drop.html
app/worker/: __init__.py  async_runner.py  celery_app.py  tasks.py
migrations/: env.py
migrations/versions/: 43bf35ffa3a8_change_telegram_user_id_to_bigint.py  dba8979bcfe5_add_hybrid_auth_to_users.py  e8ab436cb8dd_initial_migration.py
tests/: conftest.py  test_api_auth.py  test_api_products.py  test_api_subscriptions.py  test_api_users.py  test_core_security.py  test_services_notification.py  test_services_parser.py  test_services_price_monitor.py
